# playground

./: .gitignore
aeson-generic-discourse-question/: README.md  aeson-generic-discourse-question.cabal
aeson-generic-discourse-question/src/: Main.hs
agda-injective-fin/: Injfin.agda
agda-topology-basics/: SigmaIsoToType.agda  TheMissingLink.agda  Topology.agda
am-i-lying/: AmILying.agda
cardinality/: README.md  cardinality.cabal
cardinality/src/: Main.hs
guessing_game/: Cargo.toml
haskell-study-group/: phone_ihor_horobets.hs  phone_ivan_yaremenchuk.hs  phone_vialiy_yarovuy.hs  phone_volodymyr_gula.hs
haskell-study-group/phone/: phone.cabal
haskell-study-group/phone-func/: phone.cabal
haskell-study-group/phone-func/src/: Main.hs
haskell-study-group/phone/src/: Main.hs
haskell-study-group/week18/: week18.hs
haskell-study-group/week19/: Week19.hs
haskellbook-ch19-examples/: README.md  haskellbook-ch19-examples.cabal  stack.yaml
haskellbook-ch19-examples/src/: Main.hs
ormolu-typeapps/: README.md  ormolu-typeapps.cabal
ormolu-typeapps/src/: Main.hs
playing-with-datakinds/: playing_with_datakinds.hs  playing_with_datakinds_2.hs
reader-monad-example/: README.md  reader-monad-example.cabal
reader-monad-example/src/: Main.hs
rust/: slicecheck.rs  tupleref.rs
rust-actix-example/: Cargo.toml
rust-actix-example/src/: main.rs
rust-cargo-hello/: Cargo.toml
rust-json-twoways/: Cargo.toml
rust-json-twoways/src/: main.rs
rust-subcommand/: Cargo.toml
rust-subcommand/src/: main.rs
topology-hs/: search_topologies.hs
typed-process-issue-31/: run.hs
typed-process-issue-31/inner/: webapp  webapp.hs
