[package]
name = "rust-actix-example"
version = "0.1.0"
authors = ["Kostiantyn Rybnikov <k-bx@k-bx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~2.0"
actix-rt = "~1.1.1"
serde = "~1.0.110"
env_logger = "~0.7"
tokio = { version = "~0.2.21", features = ["full"] }
reqwest = { version = "~0.10.4", features = ["json"] }
async-std = "~1.6.0-beta.1"
